--- a/Bango/style.css
+++ b/Bango/style.css
@@ -1,14 +1,25 @@
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    scroll-behavior: smooth;
+    
+    
+}
+
 html,
 body {
     margin: 0;
-    font-size: 10px;
     box-sizing: border-box;
+    font-size: 10px;
 }
 #bigcontainer {
     display: flex;
     flex-flow: column;
     align-items: center;
     gap: 10rem;
+    
 }
 .cell {
     font-size: 10rem;
@@ -28,4 +39,19 @@ body {
     min-height: 30rem;
     /*laver grid til column, ift nummerne*/
     grid-auto-flow: column;
+}
+
+.inputbutton {
+    margin-left: 42.5%;
+    padding: 1.5vw;
+}
+
+#inputline {
+    font-size: 1.5em;
+    padding: .3em;
+}
+
+#create {
+    font-size: 1.5em;
+    padding: .3em;
 }
