--- a/Bango/style.css
+++ b/Bango/style.css
@@ -8,35 +8,31 @@
     
 }
 
-html,
-body {
-    margin: 0;
-    box-sizing: border-box;
-    font-size: 10px;
-}
 #bigcontainer {
     display: flex;
     flex-flow: column;
     align-items: center;
-    gap: 10rem;
+    justify-content: center;
+    gap: 8.5rem;
+    margin-bottom: 10%;
     
 }
 .cell {
-    font-size: 10rem;
+    font-size: 6.5rem;
     text-align: center;
-    height: 11rem;
-    width: 11rem;
-    border: .2rem solid black;
+    height: 8rem;
+    width: 8rem;
+    border: .1rem solid black;
 }
 
 #container_1, #container_2, #container_3 {
     display: grid;
     grid-template-rows: repeat(var(--grid-rows), 1fr);
     grid-template-columns: repeat(var(--grid-cols), 1fr);
-    max-width: 100rem;
-    min-width: 100rem;
-    max-height: 30rem;
-    min-height: 30rem;
+    max-width: 70rem;
+    min-width: 70rem;
+    max-height: 23rem;
+    min-height: 23rem;
     /*laver grid til column, ift nummerne*/
     grid-auto-flow: column;
 }
@@ -47,11 +43,110 @@ body {
 }
 
 #inputline {
-    font-size: 1.5em;
-    padding: .3em;
+    font-size: 1em;
+    padding: .2em;
 }
 
 #create {
-    font-size: 1.5em;
-    padding: .3em;
+    font-size: 1em;
+    padding: .2em;
 }
+
+@media screen and (max-width: 1400px) {
+    #bigcontainer {
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+        justify-content: center;
+        gap: 7rem;
+        
+    }
+    .cell {
+        font-size: 5rem;
+        text-align: center;
+        height: 6rem;
+        width: 6rem;
+        border: .1rem solid black;
+    }
+    
+    #container_1, #container_2, #container_3 {
+        display: grid;
+        grid-template-rows: repeat(var(--grid-rows), 1fr);
+        grid-template-columns: repeat(var(--grid-cols), 1fr);
+        max-width: 50rem;
+        min-width: 50rem;
+        max-height: 18rem;
+        min-height: 18rem;
+        /*laver grid til column, ift nummerne*/
+        grid-auto-flow: column;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+    #bigcontainer {
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+        justify-content: center;
+        gap: 5.5rem;
+        
+    }
+    .cell {
+        font-size: 4rem;
+        text-align: center;
+        height: 5rem;
+        width: 5rem;
+        border: .1rem solid black;
+    }
+    
+    #container_1, #container_2, #container_3 {
+        display: grid;
+        grid-template-rows: repeat(var(--grid-rows), 1fr);
+        grid-template-columns: repeat(var(--grid-cols), 1fr);
+        max-width: 38rem;
+        min-width: 38rem;
+        max-height: 12rem;
+        min-height: 12rem;
+        /*laver grid til column, ift nummerne*/
+        grid-auto-flow: column;
+    }
+}
+
+
+@media screen and (max-width: 900px) {
+    #bigcontainer {
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+        justify-content: center;
+        gap: 4rem;
+        margin-right: 22%;
+        
+        
+    }
+    .cell {
+        font-size: 2.5rem;
+        text-align: center;
+        height: 3rem;
+        width: 3rem;
+        border: .1rem solid black;
+    }
+    
+    #container_1, #container_2, #container_3 {
+        display: grid;
+        grid-template-rows: repeat(var(--grid-rows), 1fr);
+        grid-template-columns: repeat(var(--grid-cols), 1fr);
+        max-width: 20rem;
+        min-width: 20rem;
+        max-height: 8rem;
+        min-height: 8rem;
+        /*laver grid til column, ift nummerne*/
+        grid-auto-flow: column;
+    }
+
+    .inputbutton {
+        margin-left: 30%;
+        padding: 1.5vw;
+    }
+}
+
