--- a/Forside/style.css
+++ b/Forside/style.css
@@ -18,99 +18,122 @@
       [footer-left] "foot foot foot" 30px [footer-right]
       / 120px 1fr 120px;
       
-  }
+}
 
-  .alsoMyHeader {
-    background-color: rgb(251, 251, 251);
-    grid-area: head;
-    position: sticky;
-    top: 0;
-    z-index: 4;
-    border-bottom: #000000;
-    border-style: solid;
-    border-top: white;
-    border-left: white;
-    border-right: white;
+.alsoMyHeader {
+  background-color: rgb(251, 251, 251);
+  grid-area: head;
+  position: sticky;
+  top: 0;
+  z-index: 4;
+  border-bottom: #000000;
+  border-style: solid;
+  border-top: white;
+  border-left: white;
+  border-right: white;
     
     
   }
 
-  header a {
-    text-decoration: none;
-    color: black;
-    font-size: 1.2rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 20px;
-  }
+header a {
+  text-decoration: none;
+  color: black;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 20px;
+}
 
-  .nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 20px;
-    
-  }
-
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 20px;
   
-  .logo {
-    font-size: 1.8rem;
-    color: rgb(5, 5, 116);
-    padding-left: 20px;
-    font-size: 35px;
-  }
-
-  .hamburger {
-    padding-right: 20px;
-    cursor: pointer;
-  }
-  
-  .hamburger .line {
-    display: block;
-    width: 40px;
-    height: 5px;
-    margin-bottom: 10px;
-    background-color: black;
-  }
-
-  .nav__link {
-    position: fixed;
-    width: 94%;
-    top: 5rem;
-    left: 18px;
-    background-color: lightblue;
-  }
-  
-  .nav__link a {
-    display: block;
-    text-align: center;
-    padding: 10px 0;
-  }
-  
-  .nav__link a:hover {
-    background-color: rgb(63, 61, 216, 0.5);
-  }
+}
 
   
-  .hide {
-    display: none;
-  }
+.logo {
+  font-size: 1.8rem;
+  color: rgb(5, 5, 116);
+  padding-left: 20px;
+  font-size: 35px;
+}
 
-  @media screen and (min-width: 1000px) {
-    .nav__link {
-      display: block;
-      position: static;
-      width: auto;
-      margin-right: 20px;
-      background: none;
-    }
+.hamburger {
+  padding-right: 20px;
+  cursor: pointer;
+}
   
-    .nav__link a {
-      display: inline-block;
-      padding: 15px 20px;
-    }
+.hamburger .line {
+  display: block;
+  width: 40px;
+  height: 5px;
+  margin-bottom: 10px;
+  background-color: black;
+}
+
+.nav__link {
+  position: fixed;
+  width: 94%;
+  top: 5rem;
+  left: 18px;
+  background-color: lightblue;
+}
   
-    .hamburger {
-      display: none;
-    }
-  }
+.nav__link a {
+  display: block;
+  text-align: center;
+  padding: 10px 0;
+}
+  
+.nav__link a:hover {
+  background-color: rgb(63, 61, 216, 0.5);
+}
+
+  
+.hide {
+  display: none;
+}
+  
+/*Når skærmen bliver under 1000px, bruger man hamburger menu istedet*/
+@media screen and (min-width: 1050px) {
+.nav__link {
+  display: block;
+  position: static;
+  width: auto;
+  margin-right: 20px;
+  background: none;
+}
+  
+.nav__link a {
+  display: inline-block;
+  padding: 15px 20px;
+}
+  
+.hamburger {
+  display: none;
+}
+}
+
+#body {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#pic {
+  height: 35vw;
+  width: 50vw;
+}
+
+#body h1{
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 5vw;
+}
+
+#navn {
+  font-family:'Times New Roman', Times, serif;
+  font-size: 3vw;
+}
